force-app/main/default/objects/Measurement__c/Measurement__c.object-meta.xml
<CustomObject>
  <label>Measurement</label>
  <pluralLabel>Measurements</pluralLabel>
  <nameField><type>Text</type><label>Measurement</label></nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>