force-app/main/default/objects/Measurement__c/fields/Device__c.field-meta.xml
<CustomField>
    <fullName>Device__c</fullName>
    <label>Device</label>
    <type>Text</type>
    <length>255</length>
</CustomField>