force-app/main/default/objects/Measurement__c/fields/Site_Observation__c.field-meta.xml
<CustomField>
    <fullName>Site_Observation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Observation</label>
    <referenceTo>Site_Observation__c</referenceTo>
    <relationshipLabel>Measurements</relationshipLabel>
    <relationshipName>Measurement_Site_Observations</relationshipName>
    <type>Lookup</type>
</CustomField>