force-app/main/default/objects/Measurement__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Metric__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value><fullName>°F</fullName><default>false</default><label>°F</label></value>
            <value><fullName>°C</fullName><default>false</default><label>°C</label></value>
            <value><fullName>%</fullName><default>false</default><label>%</label></value>
            <value><fullName>pH</fullName><default>false</default><label>pH</label></value>
            <value><fullName>score</fullName><default>false</default><label>score</label></value>
            <value><fullName>Result</fullName><default>false</default><label>Result (Pass/Fail)</label></value>
            <value><fullName>ft/min</fullName><default>false</default><label>ft/min</label></value>
            <value><fullName>m/s</fullName><default>false</default><label>m/s</label></value>
            <value><fullName>inH₂O</fullName><default>false</default><label>inH₂O</label></value>
            <value><fullName>Pa</fullName><default>false</default><label>Pa</label></value>
            <value><fullName>psi</fullName><default>false</default><label>psi</label></value>
            <value><fullName>bar</fullName><default>false</default><label>bar</label></value>
            <value><fullName>kPa</fullName><default>false</default><label>kPa</label></value>
            <value><fullName>lux</fullName><default>false</default><label>lux</label></value>
            <value><fullName>fc</fullName><default>false</default><label>foot-candles (fc)</label></value>
            <value><fullName>dB</fullName><default>false</default><label>dB</label></value>
            <value><fullName>ppm</fullName><default>false</default><label>ppm</label></value>
            <value><fullName>µg/m³</fullName><default>false</default><label>µg/m³</label></value>
            <value><fullName>V</fullName><default>false</default><label>V</label></value>
            <value><fullName>A</fullName><default>false</default><label>A</label></value>
            <value><fullName>W</fullName><default>false</default><label>W</label></value>
            <value><fullName>kW</fullName><default>false</default><label>kW</label></value>
            <value><fullName>Ω</fullName><default>false</default><label>Ω</label></value>
            <value><fullName>gpm</fullName><default>false</default><label>gpm</label></value>
            <value><fullName>L/min</fullName><default>false</default><label>L/min</label></value>
            <value><fullName>rpm</fullName><default>false</default><label>rpm</label></value>
            <value><fullName>in</fullName><default>false</default><label>in</label></value>
            <value><fullName>ft</fullName><default>false</default><label>ft</label></value>
            <value><fullName>mm</fullName><default>false</default><label>mm</label></value>
            <value><fullName>m</fullName><default>false</default><label>m</label></value>
        </valueSetDefinition>
        
        <!-- BEGIN valueSettings MAPPING for dependencies -->
        <!-- END valueSettings -->
    </valueSet>
</CustomField>