force-app/main/default/objects/Measurement__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <type>Number</type>
    <precision>12</precision>
    <scale>6</scale>
</CustomField>